spacing fixes

--- a/_sass/hydeout/_variables.scss
+++ b/_sass/hydeout/_variables.scss
@@ -27,7 +27,7 @@ $border-color: $gray-2 !default;
 $border-radius: 300px !default;
 $padding-v: 1em !default;
 $padding-h: 1.5em !default;
-$heading-spacing: 0.5rem !default;
+$heading-spacing: 1rem !default;
 $section-spacing: 2rem !default;
 $sidebar-width: 18rem !default;
 
